<?xml version="1.0"?>
<package format="2">
  <name>ssv102_ros</name>
  <version>0.0.0</version>
  <description>The ssv102_ros package</description>
  <maintainer email="seiga@ieee.org">seiga-k</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>

  <export>
  </export>
</package>
